# hospitaljobsin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tmuxinator.yml  .windsurfrules  Caddyfile  LICENSE.md  README.md  autocomplete_visualization.md  compose.yaml  diagram.py  docker-compose.e2e.yml  docker-compose.yml  example-schema.jsonc  implementation_summary.md  package-lock.json  package.json  pnpm-lock.yaml  relay.config.json
.cursor/: mcp.json  settings.json
.github/: dependabot.yml
.github/assets/: generate_diagram.py
.github/workflows/: apply-infrastructure.yml  apply-shared-infra.yml  (+19 more)
.taskmaster/: config.json  state.json
HospitalJobs-Mobile/: settings.gradle.kts
app/: layout.tsx  page.tsx  providers.tsx
caddy/: Dockerfile
certs/: localtest.me-key.pem  localtest.me.pem
client/: .env.example  .eslintrc.json  .gitignore  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
create_job_crew/: .env.example  README.md  healthcare_job_posting.md  pyproject.toml
e2e/: .env.example  .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml
hospitaljobsin-Mobile/: settings.gradle.kts
infrastructure/: .env.example  .gitignore  api_gateway.tf  cognito.tf  github.tf  iam.tf  lambda.tf  location_place_index.tf  main.tf  mongodb_atlas.tf  opennext.tf  outputs.tf  route_53.tf  secrets.tf  ses.tf  storage.tf  terraform.tfvars.example  turnstile.tf  variables.tf  vpc.tf
minio/: entrypoint.sh
packer/: image.pkr.hcl  playwright-image.pkr.hcl
schema/: schema.graphql
server/: .dockerignore  .env.example  .gitignore  Dockerfile  GOOGLE_DRIVE_SETUP.md  README.md  langgraph.json  package.json  pyproject.toml  query_map.json  test_cors.py
server/app/: __init__.py  agent.py  config.py  container.py  context.py  dataloaders.py  graphql_app.py  lambda_handler.py  logger.py  mcp_server.py  middleware.py  scalars.py  schema.py  sqs_handler.py
server/app/accounts/: dataloaders.py  documents.py  exceptions.py  mutation.py  query.py  repositories.py  routes.py  services.py  types.py
server/app/accounts/agents/: profile_parser.py
server/app/agent/: __init__.py
server/app/ai/: background.py  models.py  routes.py
server/app/auth/: dependencies.py  documents.py  exceptions.py  mutation.py  permissions.py  query.py  repositories.py  routes.py  services.py  types.py  utils.py
server/app/base/: models.py  types.py
server/app/companies/: dataloaders.py  documents.py  exceptions.py  mutation.py  query.py  repositories.py  services.py  types.py
server/app/core/: analytics.py  aws_sdk.py  captcha.py  constants.py  dataloaders.py  emails.py  formatting.py  genai_client.py  geocoding.py  inject.py  instrumentation.py  mailinator_client.py  messages.py  oauth.py  ocr.py  recaptcha.py  redis_client.py  sms.py  templates.py
server/app/core/schema/: extensions.py
server/app/core/schema/extensions/: mask_errors.py  persisted_queries.py
server/app/crews/create_job/: crew.py  main.py
server/app/crews/create_job/config/: agents.yaml  tasks.yaml
server/app/crews/filter_job/: crew.py  main.py  models.py  service.py  services.py
server/app/crews/filter_job/config/: agents.yaml  tasks.yaml
server/app/crews/filter_job/tools/: batch_profile_analyzer_tool.py  job_applicant_vector_search_tool.py  mongo_filter_tool.py  profile_analyzer_tool.py  profile_ranker_tool.py  query_parser_tool.py  semantic_matcher_tool.py
server/app/database/: __init__.py  paginator.py
server/app/embeddings/: services.py
server/app/geocoding/: documents.py  models.py  query.py  repositories.py  routes.py  services.py  types.py
server/app/health/: routes.py
server/app/jobs/: agents.py  dataloaders.py  documents.py  exceptions.py  models.py  mutation.py  query.py  repositories.py  routes.py  services.py  types.py
server/app/jobs/agents/: applicant_analysis.py  applicant_query_parser.py
server/app/lib/: aws_sdk.py  boto3.py  constants.py  emails.py  formatting.py  middleware.py  oauth.py  templates.py
server/app/mailbox/: messages.py  routes.py
server/app/middleware/: __init__.py  auth.py  cors.py  fingerprints.py
server/app/oauth2/: routes.py
server/app/organizations/: dataloaders.py  documents.py  exceptions.py  mutation.py  query.py  repositories.py  services.py  types.py
server/app/profiles/: documents.py  repositories.py  services.py
server/app/routes/: auth.py  filter_job.py  jobs.py  organizations.py  profiles.py
server/app/testing/: routes.py  schemas.py  services.py
server/lambda_handlers/: generate_whatsapp_messages.py  setup_staging_database.py  setup_staging_environment.py  teardown_staging_database.py  teardown_staging_environment.py
server/scripts/: geerate_webauthn_keys.py  gen_user_handle.py  insert_docs.py  insert_missing_analysis.py  insert_missing_job_application_forms.py  insert_missing_profiles.py  re_embed_docs.py  refresh_profile_snapshots.py  run_mcp_server.py  run_persist_server.py  run_server.py  setup_e2e.py  setup_e2e_database.py  setup_e2e_server.py  teardown_e2e.py  test_db_conn.py  test_di_old.py  test_di_time.py  test_filter_job.py  test_web_auth.py
server/scripts/utils/: add_cleaned_job_descriptions.py  gen_webauthn_keypair.py  gen_whatsapp_messages.py  import_regions.py  insert_docs.py  insert_missing_analysis.py  insert_missing_profiles.py  mark_all_unposted.py  refresh_profile_snapshots.py  shorten_location_strings.py  update_acc_terms_policy.py  update_addresses.py  update_locations.py
server/templates/emails/base/: body.html  body.txt
server/templates/emails/email-verification/: body.html  body.txt  subject.txt
server/templates/emails/organization-invite/: body.html  body.txt  subject.txt
server/templates/emails/password-reset/: body.html  body.txt  subject.txt
server/templates/emails/whatsapp-messages/: body.html  body.txt  subject.txt
server/tests/e2e/: seed_data.py
sms-catcher/: .env.example  Dockerfile  pyproject.toml
sms-catcher/app/: __init__.py  config.py  logger.py  routes.py  templates.py
sms-catcher/scripts/: run_server.py
sst-router/: sst.config.ts
(+1789 files in other folders)
