[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioinject>=0.35.3",
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.115.5",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "strawberry-graphql[cli]>=0.253.0",
    "structlog>=24.4.0",
    "beanie>=1.27.0",
    "motor>=3.6.0",
    "uvicorn[standard]>=0.32.1",
    "passlib[argon2]>=1.7.4",
    "result>=0.17.0",
    "authlib>=1.4.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "aiosmtplib>=3.0.2",
    "jinja2>=3.1.5",
    "humanize>=4.11.0",
    "email-validator>=2.2.0",
    "boto3>=1.36.1",
    "aioboto3>=13.4.0",
    "pymongo>=4.9.2",
    "webauthn>=2.5.1",
    "pyotp>=2.9.0",
    "python-jose[cryptography]>=3.4.0",
    "cbor2>=5.6.5",
]

[tool.uv]
dev-dependencies = [
    "types-passlib>=1.7.7.20241221",
    "types-aioboto3[essential]>=13.4.0",
    "types-authlib>=1.4.0.20241230",
    "types-python-jose>=3.4.0.20250224",
]

[tool.mypy]
plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]
exclude = ["^.venv/"]

strict = true
follow_imports = "normal"
ignore_missing_imports = false

disallow_untyped_calls = false

allow_redefinition = false
disallow_any_explicit = false
ignore_errors = false
local_partial_types = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_unused_ignores = false
warn_return_any = false
warn_unreachable = true

pretty = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff]
src = ["app", "tests"]
lint.fixable = ["F", "E", "W", "I", "COM", "UP", "RUF"]
lint.unfixable = [
    "F841", # variable  is assigned to but never used
]
lint.select = ["ALL"]
lint.ignore = [
    "E501",    # line length
    "ANN101",
    "ANN102",
    "D10",     # disable mandatory docstrings
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "PD",      # pandas-vet
    "PLR0913", # too many arguments
    "TCH001",
    "TCH002",
    "TCH003",
    "EXE",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106", "E712"]
"migrations/*" = ["INP001"]
"migrations/versions/*" = ["D400", "D415"]


[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]
staticmethod-decorators = ["staticmethod"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"starlette.status".msg = "Use http.HTTPStatus instead."
"fastapi.status".msg = "Use http.HTTPStatus instead."
"httpx.codes".msg = "Use http.HTTPStatus instead."
