[project]
name = "sms-catcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.116.1",
    "granian[pname,uvloop]==2.4.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "watchfiles==1.1.0",
]
